--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,7 +56,9 @@ color: #FFFFFF;
 font-style: normal;
 font-weight: 400;
 font-size: 80px;
-line-height: 89px;
+padding: 4.5px 0;
+line-height: 1;
+box-sizing: border-box;
 }
 .title-h3{
    font-family: 'New-YorkerC';
@@ -85,7 +87,6 @@ line-height: 75px;
    }
 }
 /*Обнуление*/
-
 *,
 *:before,
 *:after {
@@ -915,6 +916,7 @@ bottom: 183px;
    .soul__wrapper{
       max-width: 1439px;
       margin-left: auto;
+      overflow: hidden;
    }
    .soul__title {
       margin-bottom: 80px;
@@ -1062,3 +1064,147 @@ height: 430.85px;
 }
 
 }
+/*-------------------------*/
+
+
+
+
+.schedule {
+   .title-h2{
+      .star-in::before{
+
+         width: 34px;
+         height: 39px;
+         background-image: url('../img/main/star-34x39.png');
+         background-repeat: no-repeat;
+         top: 50%;
+         right: 50%;
+         transform: translate(-25% ,-55%);
+      }
+   }
+}
+.schedule__wrapper{
+   max-width: 1206px;
+   margin: 0px auto;
+}
+.schedule__container {
+   padding-top: 230px;
+   margin-bottom: 300px;
+}
+.schedule__top {
+   display: flex;
+   justify-content: space-between;
+   align-items: end;
+   margin-bottom: 30px;
+}
+.schedule__top-link{
+   color: white;
+}
+
+.schedule__list {
+   display: flex;
+   flex-direction: column;
+   position: relative;
+}
+.shedule__link {
+   display: flex;
+   align-items: center;
+   padding-bottom: 9.5px;
+   padding-top: 50px;
+   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+   position: relative;
+}
+.shedule__link-days {
+   font-family: 'Arimo';
+   
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 20px;
+color: #FFFFFF;
+opacity: 0.6;
+text-decoration: none;
+width: 241px;
+padding-left: 1px;
+}
+.shedule__link-name {
+   color: #fff;
+   opacity: 0.6;
+   text-decoration: none;
+   flex: 1 1 auto;
+}
+.schedule__top-all-link, .shedule__link-more-info {
+   text-decoration: none;
+   text-transform: uppercase;
+   position: relative;
+   padding-right: 52px;
+   line-height: 18px;
+}
+.schedule__top-all-link::after, .shedule__link-more-info::after{
+   content: '';
+   position: absolute;
+   right: 0;
+   top: 50%;
+   width: 31px;
+height: 12.44px;
+   transform: translateY(-50%);
+   background-image: url('../img/schedule/vector.svg');
+   background-size: cover;
+}
+.shedule__link:hover{
+   transition: border-bottom-color 1s;
+   border-bottom-color: #fff;
+   .shedule__link-days, .shedule__link-name,.shedule__link-more-info{
+      opacity: 1;
+      color: #fff;
+      transition: opacity 1s, color 1s;
+   }
+   
+
+}
+.shedule__link-name::after{
+   content: '';
+   position: absolute;
+   background-image: url('../img/main/star-34x39.png');
+   background-size: 34px 39px;
+   background-position: center;
+   background-repeat: no-repeat;
+   width: 94px;
+   height: 94px;
+   border: 1px solid rgba(245, 231, 206, 0.2);
+   border-radius: 50%;
+   bottom: 0;
+   left: 682px;
+   transform: translateY(50%);
+   opacity: 0;
+   transition: opacity 1s;
+}
+.shedule__link-days::after{
+   content: '';
+   width: 94px;
+   height: 94px;
+   position: absolute;
+   background: #F5E7CE;
+   opacity: 0.4;
+   filter: blur(150px);
+   bottom: 0;
+   left: 682px;
+   transform: translateY(50%);
+   opacity: 0;
+   transition: opacity 1s;
+}
+.schedule__list::after{
+   content: '';
+   position: absolute;
+   width: 533px;
+   height: 533px;
+   background: #F5E7CE;
+   opacity: 0.4;
+   filter: blur(533px);
+   left: -183px;
+   bottom: 0;
+}
+.shedule__link:hover .shedule__link-name::after,.shedule__link:hover .shedule__link-days::after{
+   opacity: 1;
+}
+/*-----------------------*/
