--- a/css/style.css
+++ b/css/style.css
@@ -2392,6 +2392,13 @@ select.form__input {
   .come__wrapper {
     padding-right: 0;
   }
+  .feed-back__first-picture {
+    width: 156px;
+    height: 228px;
+  }
+  .feed-back__first-picture img {
+    width: 100%;
+  }
 }
 @media (max-width: 920px) {
   .come__title-top {
@@ -2404,6 +2411,19 @@ select.form__input {
 @media (max-width: 800px) {
   .come::after {
     display: none;
+  }
+  .feed-back__title {
+    left: 35px;
+  }
+  .feed-back__title .star-in::before {
+    display: none;
+  }
+  .feed-back__title P {
+    padding-left: calc(43px + 97 * ((100vw - 320px) / 1600));
+  }
+  .feed-back__title-bottom {
+    left: 18.22vw;
+    left: calc(33px + 107 * ((100vw - 320px) / 1600));
   }
 }
 @media (max-width: 690px) {
@@ -2450,6 +2470,49 @@ select.form__input {
     width: 100%;
     height: auto;
   }
+  .feed-back__column-1,
+.feed-back__column-2,
+.feed-back__column-3 {
+    left: calc(45px + 205 * ((100vw - 320px) / 1600));
+  }
+  .feed-back__column-1 {
+    top: 184px;
+  }
+  .feed-back__column-2 {
+    top: 394px;
+  }
+  .feed-back__column-3 {
+    top: 634px;
+  }
+  .feed-back__title {
+    left: 50%;
+    -webkit-transform: translateX(-55%);
+        -ms-transform: translateX(-55%);
+            transform: translateX(-55%);
+    white-space: nowrap;
+  }
+  .feed-back__title p {
+    display: inline;
+    padding: 0;
+  }
+  .feed-back__title-bottom {
+    top: 44px;
+    width: 265px;
+    padding: 0;
+    white-space: normal;
+  }
+  .feed-back__wrapper {
+    min-height: 814px;
+    margin-bottom: 100px;
+  }
+  .feed-back__second-picture {
+    display: none;
+  }
+  .feed-back__first-picture {
+    right: 30px;
+    top: 180px;
+    width: 120px;
+  }
 }
 @media (max-width: 450px) {
   .come__wrapper {
@@ -2470,5 +2533,8 @@ select.form__input {
 .come__column-2,
 .come__column-3 {
     left: 45px;
+  }
+  .feed-back__first-picture {
+    display: none;
   }
 }
