--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 /*Повторное использование стилей*/
+$maxWidth: 1920;
+@mixin adaptive-value($property, $startSize, $minSize) {
+   $addSize: $startSize - $minSize;
+   #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+}
 .wrapper {
    padding: 0 35px;
    max-width: 1200px;
@@ -1984,6 +1989,13 @@ line-height: 75px;
    .come__wrapper{
       padding-right: 0;
    }
+   .feed-back__first-picture{
+      width: 156px;
+      height: 228px;
+      img{
+         width: 100%;
+      }
+   }
 }
 @media (max-width:920px) {
    .come__title-top {
@@ -1998,6 +2010,20 @@ line-height: 75px;
    .come::after{
       display: none;
    }
+   .feed-back__title{
+      .star-in::before{
+         display: none;
+      }
+      left: 35px;
+      P{
+         @include adaptive-value("padding-left", 140, 43);
+      }
+   }
+   .feed-back__title-bottom {
+      left: 18.22vw;
+      @include adaptive-value("left", 140, 33);
+  }
+
 }
 @media (max-width:690px) {
    .come__wrapper{
@@ -2043,6 +2069,48 @@ line-height: 75px;
          height: auto;
       }
    }
+   .feed-back__column-1,
+   .feed-back__column-2,
+   .feed-back__column-3{
+      @include adaptive-value(left, 250, 45)
+   }
+   .feed-back__column-1{
+      top: 184px;
+   }
+   .feed-back__column-2{
+      top: 394px;
+   }
+   .feed-back__column-3{
+      top: 634px;
+   }
+   .feed-back__title{
+      left: 50%;
+      transform: translateX(-55%);
+      white-space: nowrap;
+      p{
+         display: inline;
+         padding: 0;
+      }
+   }
+   .feed-back__title-bottom{
+      top: 44px;
+      width: 265px;
+      padding: 0;
+      white-space: normal;
+   }
+   .feed-back__wrapper{
+      min-height: 814px;
+      margin-bottom: 100px;
+   }
+   .feed-back__second-picture{
+      display: none;
+   }
+   .feed-back__first-picture{
+      right: 30px;
+      top: 180px;
+      width: 120px;
+   }
+ 
 }
 @media (max-width:450px) {
    .come__wrapper{
@@ -2061,7 +2129,12 @@ line-height: 75px;
    }
    .come__column-1,
    .come__column-2,
-    .come__column-3{
+   .come__column-3{
       left: 45px;
    }
+   .feed-back__first-picture{
+      display: none;
+   }
 }
+
+
