--- a/css/style.css
+++ b/css/style.css
@@ -1014,11 +1014,13 @@ body::before {
   font-size: 25px;
   line-height: 40px;
   text-transform: uppercase;
-  opacity: 0.6;
   max-width: 720px;
   margin-top: 80px;
   float: right;
   margin-right: 95px;
+}
+.secrets__text p {
+  opacity: 0.6;
 }
 
 .secrets__samll-text {
@@ -1028,11 +1030,13 @@ body::before {
   font-weight: 400;
   font-size: 17px;
   line-height: 22px;
-  opacity: 0.6;
   float: right;
   margin-right: 27px;
   margin-left: 53px;
   margin-top: 80px;
+}
+.secrets__samll-text p {
+  opacity: 0.6;
 }
 
 .secrets__link {
@@ -2266,7 +2270,7 @@ select.form__input {
   }
   .secrets {
     padding-top: 150px;
-    padding-bottom: 150px;
+    padding-bottom: 190px;
   }
   .soul {
     padding-bottom: 150px;
@@ -2387,6 +2391,71 @@ select.form__input {
     top: 800px;
     left: 22.7vw;
   }
+  .secrets__title-bottom {
+    text-align: left;
+  }
+  .secrets::after {
+    display: none;
+  }
+}
+@media (max-width: 1220px) {
+  .secrets__text {
+    max-width: 100%;
+    padding: 0 37px;
+  }
+  .secrets__picture-1 {
+    top: 739px;
+    right: 495px;
+    left: auto;
+  }
+  .secrets__picture-1::before {
+    display: none;
+  }
+  .secrets {
+    padding-top: 138px;
+  }
+  .secrets__picture-3 {
+    display: none;
+  }
+  .secrets__picture-2 {
+    width: 106px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    right: 48px;
+    bottom: 250px;
+  }
+  .secrets__picture-2::after {
+    width: 20px;
+    height: 24px;
+    bottom: -12px;
+    right: 19px;
+    left: auto;
+  }
+  .secrets__samll-text {
+    padding-top: 54px;
+    margin-left: auto;
+    max-width: 280px;
+    margin-right: 175px;
+    float: none;
+  }
+  .secrets__title {
+    padding-left: 35px;
+    padding-right: 10px;
+  }
+  .secrets__wrapper {
+    padding-left: 0;
+  }
+  .secrets__text {
+    margin-right: 0;
+  }
+  .secrets__text img {
+    margin-top: 30px;
+  }
+  .secrets__text .secrets__picture-2 {
+    text-align: center;
+    width: 100%;
+  }
 }
 @media (max-width: 1000px) {
   .come__wrapper {
@@ -2424,6 +2493,9 @@ select.form__input {
   .feed-back__title-bottom {
     left: 18.22vw;
     left: calc(33px + 107 * ((100vw - 320px) / 1600));
+  }
+  .secrets__picture-1 {
+    top: 800px;
   }
 }
 @media (max-width: 690px) {
@@ -2512,6 +2584,50 @@ select.form__input {
     right: 30px;
     top: 180px;
     width: 120px;
+  }
+  .secrets__link a img {
+    width: 133px;
+  }
+  .secrets__text {
+    font-size: 16px;
+    line-height: 23px;
+    margin-top: 40px;
+    padding: 0 10px;
+  }
+  .secrets {
+    padding-top: 100px;
+  }
+  .secrets__picture-2 {
+    position: static;
+  }
+  .secrets__picture-2::after {
+    display: none;
+  }
+  .secrets__samll-text {
+    max-width: 100%;
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 30px;
+  }
+  .secrets__samll-text img {
+    width: 300px;
+    margin-top: 40px;
+  }
+  .secrets__samll-text .secrets__picture-1 {
+    width: 100%;
+    text-align: center;
+  }
+  .secrets__link {
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 140px;
+  }
+  .secrets__link img {
+    margin: 0;
+  }
+  .secrets__picture-1 {
+    position: static;
   }
 }
 @media (max-width: 450px) {
