--- a/css/style.css
+++ b/css/style.css
@@ -1259,7 +1259,7 @@ body::before {
 .help__img-3 {
   position: absolute;
   top: 0;
-  right: 699px;
+  left: 511px;
   width: 300px;
   height: 284px;
   overflow: hidden;
@@ -2308,6 +2308,12 @@ select.form__input {
   .footer-top__wrapper {
     padding-bottom: 300px;
   }
+  .help__title-container {
+    width: 100%;
+  }
+  .help__img-1 {
+    left: 38px;
+  }
 }
 @media (max-width: 1315px) {
   .title-h2 {
@@ -2402,6 +2408,15 @@ select.form__input {
   .secrets::after {
     display: none;
   }
+  .schedule__wrapper {
+    padding: 0 32px;
+  }
+  .schedule__wrapper .star-in::before {
+    display: none;
+  }
+  .schedule__list::after {
+    display: none;
+  }
 }
 @media (max-width: 1220px) {
   .secrets__text {
@@ -2429,6 +2444,21 @@ select.form__input {
   .soul .slide__content {
     padding-left: 39px;
     padding-right: 43px;
+  }
+  .help__img-1::after {
+    display: none;
+  }
+  .help__img-2 {
+    display: none;
+  }
+  .help__link {
+    right: 52px;
+  }
+  .help__title {
+    left: 100px;
+  }
+  .help__title-in-pickture {
+    left: -411px;
   }
 }
 @media (max-width: 1000px) {
@@ -2490,8 +2520,48 @@ select.form__input {
   .feed-back__first-picture img {
     width: 100%;
   }
+  .soul {
+    padding-bottom: 100px;
+  }
   .soul .soul__bottom-title {
     margin-left: 149px;
+  }
+  .help__title {
+    top: 81px;
+    left: 0;
+    padding-left: 100px;
+  }
+  .help__title-in-pickture {
+    top: -76px;
+    width: 100vw;
+    left: -488px;
+    padding-left: 100px;
+  }
+  .help__img-3 {
+    top: 157px;
+    left: 488px;
+    width: 203px;
+    height: 237px;
+  }
+  .help .span-4 {
+    padding-left: 143px;
+  }
+  .help .span-5 {
+    margin-left: 0;
+  }
+  .help .span-6 {
+    padding-left: 143px;
+  }
+  .help .help__link {
+    top: auto;
+    bottom: 0px;
+    height: 150px;
+  }
+  .help .help__link img {
+    width: 150px;
+  }
+  .help .schedule__container {
+    padding-top: 145px;
   }
 }
 @media (max-width: 920px) {
@@ -2500,6 +2570,9 @@ select.form__input {
   }
   .come__title-bottom {
     margin-left: 22vw;
+  }
+  .shedule__link-more-info {
+    font-size: 0;
   }
 }
 @media (max-width: 800px) {
@@ -2524,6 +2597,28 @@ select.form__input {
   }
   .soul .soul__bottom-title {
     margin-left: 43px;
+  }
+  .help .help__title {
+    padding-left: 50px;
+  }
+  .help .help__title-in-pickture {
+    padding-left: 50px;
+  }
+  .schedule__top-all-link {
+    width: 142px;
+    padding-bottom: 18px;
+    padding-right: 0;
+  }
+  .schedule__top-all-link::after {
+    top: auto;
+    bottom: 0;
+    left: 0;
+    right: auto;
+  }
+}
+@media (max-width: 710px) {
+  .help .help__title, .help .help__title-in-pickture {
+    padding-left: 10px;
   }
 }
 @media (max-width: 690px) {
@@ -2559,7 +2654,7 @@ select.form__input {
   .come__column-3 {
     top: 727px;
   }
-  .star-in {
+  .star-in::before {
     display: none;
   }
   .come__second-pict {
@@ -2687,6 +2782,83 @@ select.form__input {
   .soul .slide__link img {
     width: 133px;
   }
+  .help .help__title-container {
+    height: auto;
+  }
+  .help .help__link {
+    position: static;
+    margin-top: 29px;
+    width: 150px;
+    margin: 0px auto;
+  }
+  .help .help__title {
+    padding-left: 0;
+    max-width: 400px;
+    margin: 0px auto;
+    position: static;
+  }
+  .help .help__img-1 {
+    z-index: -1;
+    top: 41px;
+  }
+  .help .help__img-3 {
+    display: none;
+  }
+  .help .span-1 {
+    padding-left: 11px;
+  }
+  .help .span-2 {
+    padding-left: 31px;
+    padding-right: 100px;
+  }
+  .help .span-3 {
+    padding-left: 56px;
+  }
+  .help .span-4 {
+    padding-left: 0;
+  }
+  .help .span-5 {
+    padding-left: 28px;
+    padding-right: 50px;
+  }
+  .help .span-6 {
+    padding-left: 28px;
+  }
+  .help .span-8, .help .span-7 {
+    padding-left: 60px;
+  }
+  .help__title-container {
+    height: 447px;
+  }
+  .help__img-1 {
+    left: 40%;
+    top: 85px;
+    bottom: auto;
+    width: 173.78px;
+    height: 176.52px;
+  }
+  .schedule__top-all-link {
+    width: auto;
+    margin-top: 41px;
+    padding-right: 52px;
+    padding-bottom: 0;
+  }
+  .schedule__top-all-link::after {
+    right: 0;
+    top: 50%;
+    left: auto;
+    bottom: auto;
+  }
+  .schedule__container {
+    padding-top: 100px;
+    margin-bottom: 135px;
+  }
+  .shedule__link-days {
+    width: 120px;
+  }
+  .schedule__wrapper {
+    padding: 0 15px;
+  }
 }
 @media (max-width: 450px) {
   .come__wrapper {
@@ -2713,5 +2885,21 @@ select.form__input {
   }
   .soul .slide__content {
     padding: 0;
+  }
+  .shedule__link {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .shedule__link-more-info {
+    font-size: 15px;
+    color: #fff;
   }
 }
